[package]
name = "yam"
version = "0.1.0"
edition = "2024"
description = "Context-aware YAML to markdown document generator"
license = "MIT"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.226", features = ["derive"] }

tera = "1.20.0"
thiserror = "2.0.16"
tree-sitter = "0.25.9"
tree-sitter-yaml = "0.7.1"

[build-dependencies]
built = { version = "0.8.0", features = ["git2", "semver", "chrono"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false
